# Aether

./: .gitignore  LICENSE  README.md  next_mission.md
aether-api/: .env.example  .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  run_worker_once.py  seed_data.py  test_connection.py  test_end_to_end.py  test_ragas_faithfulness.py  test_slack_integration.py  test_trace_ingestion.py
aether-api/alembic/: env.py
aether-api/alembic/versions/: 2025_10_18_0028-b8ff8c6d9ea9_initial_schema.py  2025_10_18_1622-b21bc001d252_add_alert_configs_table.py
aether-api/app/: main.py
aether-api/app/api/v1/: alert_config.py  alerts.py  auth.py  health.py  projects.py  traces.py
aether-api/app/core/: config.py  database.py  redis_client.py
aether-api/app/models/: __init__.py  alert.py  alert_config.py  evaluation.py  organization.py  project.py  trace.py  user.py
aether-api/app/schemas/: alert.py  alert_config.py  trace.py
aether-api/app/services/: metrics_service.py  slack_service.py
aether-api/app/workers/: evaluator.py
aether-api/docs/: SLACK_ALERTING.md
benchmarks/: README.md  zig_vs_python.py
docs/: README.md
docs/architecture/: README.md
docs/ops/: README.md
docs/usage/: README.md
examples/: README.md  python_tools.py
python/: pyproject.toml
python/src/aether/: __init__.py  binary.py  runtime.py
python/tests/: __init__.py
scripts/: README.md
zig/: build.zig
zig/src/: lib.zig
zig/src/cache/: README.md
zig/src/core/: README.md
zig/src/executor/: README.md
zig/src/ffi/: README.md  exports.zig
zig/tests/: README.md
